# robocept-bringup

./: Makefile  README.md  TODO.md
src/robocept_system/: package.xml  setup.cfg  setup.py
src/robocept_system/config/: health_monitor_sim.yaml  static_transforms.yaml
src/robocept_system/launch/: perception_only.launch.py  robot.launch.py  sim.launch.py  sim_base.launch.py  sim_obstacle.launch.py  sim_obstacle_base.launch.py
src/robocept_system/test/: capture_sim.py  test_obstacle_avoidance_sim.py
src/robocept_system/urdf/: robocept.urdf.xacro
src/robocept_system/worlds/: robocept_eval_multi_obstacle.sdf  robocept_test.sdf  robocept_test.world
